# AndroidBinUtils

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/reinhard/elftag/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  elftag.c
app/src/main/java/com/reinhard/binutils/: MainActivity.java
app/src/main/java/com/reinhard/elftag/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/reinhard/elftag/: ExampleUnitTest.java
elftag/src/androidTest/java/com/reinhard/elftag/: ExampleInstrumentedTest.java
elftag/src/main/: AndroidManifest.xml
elftag/src/main/cpp/: elftag.c
elftag/src/test/java/com/reinhard/elftag/: ExampleUnitTest.java
fixelfsection/: build.gradle
fixelfsection/src/androidTest/java/com/reinhard/fixelfsection/: ExampleInstrumentedTest.java
fixelfsection/src/main/: AndroidManifest.xml
fixelfsection/src/main/cpp/: CMakeLists.txt  fix.c  fix.h
fixelfsection/src/test/java/com/reinhard/fixelfsection/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sofixer/: build.gradle
sofixer/src/androidTest/java/com/reinhard/sofixer/: ExampleInstrumentedTest.java
sofixer/src/main/: AndroidManifest.xml
sofixer/src/main/cpp/: CMakeLists.txt
sofixer/src/test/java/com/reinhard/sofixer/: ExampleUnitTest.java
